2007-01-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (format-expand): handle the case when % is the
	last char in the string.

	* user.lisp (*root-map*): bind pull-hidden-next,
	pull-hidden-previous, pull-hidden-other, other-in-frame,
	next-in-frame, prev-in-frame
	(pull-window): new function
	(focus-forward): new argument pull-p. use pull-window
	(pull-window-by-number): use pull-window
	(other-hidden-window): new function
	(other-window-in-frame): likewise
	("pull-hidden-next"): new command
	("pull-hidden-previous"): likewise
	("pull-hidden-other"): likewise
	("next-in-frame"): likewise
	("prev-in-frame"): likewise
	("other-in-frame"): likewise
	(other-window): use the group's window list to find the other
	window.
	("other"): show the frame indicator if a frame switch occurred.

2007-01-11  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("putsel"): new command
	("getsel"): likewise

	* stumpwm.asd: properly error out when clx isn't detected.

2007-01-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): rewrite using xlib:list-font-names
	(xwin-grab-keys): only grab the key if it has a corresponding keycode.

	* user.lisp (format-time-string): new function
	(echo-date): call format-time-string

	* version.lisp (*version*): include a compile/load time.

2007-01-08  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (run-prog-collect-output): collect error output as well for sbcl and cmucl
	(split-string): return ("") when splitting the empty string

	* stumpwm.asd (:stumpwm): change around dependencies

	* mode-line.lisp (screen-mode-line-mode): new function

2007-01-07  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): query something about the font. catch xlib:font-error conditions.

	* primitives.lisp (*run-or-raise-all-groups*): new global var

	* user.lisp (argument-pop-or-read): new function
	(argument-pop-rest-or-read): likewise
	(run-or-raise): search only the current group when
	*run-or-raise-all-groups* is NIL.
